_sass/_includes/_content.scss
// - - - - - - - - - - - - - - - - - -

// Single page/post/project

// - - - - - - - - - - - - - - - - - -

.intro {
	
	margin-top: 0px;

	h1 {

		@include mq(tabletp) {
			white-space: pre-line;
		}
	}

	p {

	}

	h2 {
		line-height: 39px;
	}
}

.content-wrap {

	@include mq(tabletp) {
		max-width: 90%;
		margin: 0 auto;
	}
}

.single {

	h1, h2, h3, h4, h5, h6, p, ul, ol, summary {
		margin-left: auto;
		margin-right: auto;
		padding-left: 30px;
		padding-right: 30px;
		max-width: 500px;

		@include mq(tabletp) {
			padding-left: 0;
			padding-right: 0;
			max-width: 80%;
		}

		@include mq(tabletl) {
			max-width: 65%;
		}

		@include mq(laptop) {
			max-width: 60%;
		}

		p a {
			color: $text-dark-color;
			font-weight: 300;
			@include transition(all 0.15s ease-in-out);
			border-bottom: 1px solid currentColor !important;
		  display: inline-block;
		  line-height: 0.85;
		  text-shadow:
		    1px -1px white,
		    -1px 1px white,
		    0px 0px white,
		    0px 0px white;

			&:hover {
				color: $accent-color;
			}
		}
	}

	hr {
		margin: 30px auto;
		width: calc(100vw - 60px);
		max-width: 440px;

		@include mq(tabletp) {
			margin-top: 40px;
			margin-bottom: 40px;
			margin-left: auto;
			margin-right: auto;
			width: auto;
			max-width: 70%;
		}

		@include mq(tabletl) {
			max-width: 65%;
		}

		@include mq(laptop) {
			max-width: 60%;
		}
	}

	blockquote,
	figure {
		max-width: 90%;
		margin: 20px auto;

		@include mq(tabletp) {
			margin: 20px auto;
		}

		@include mq(laptop) {
			margin: 20px auto;
			max-width: 60%;
		}
	}

	blockquote p {
		max-width: 100%;
		padding: 0;
	}

	p .button {
		margin-top: 10px;
	}

	.highlighter-rouge,
	table {
		margin: 20px auto;
		width: 100%;
		max-width: 80%;

		@include mq(tabletp) {
			margin: 30px auto;
			max-width: 80%;
		}

		@include mq(tabletl) {
			max-width: 65%;
		}

		@include mq(laptop) {
			margin: 70px auto;
			max-width: 55%;
		}
	}

	.highlight {
		display: block;
		padding: 0;
		line-height: 1.5;
		font-size: $p-small*0.85;
		line-height: $p-lineheight;
		overflow: auto;

		@include mq(tabletp) {
			font-size: $p-medium*0.85;
		}

		@include mq(laptop) {
			font-size: $p-large*0.85;
		}

		.highlight {
			padding: 20px;

			@include mq(tabletp) {
				padding: 30px;
			}

			@include mq(laptop) {
				padding: 40px;
			}
		}
	}

	table {
		border-radius: 3px;
		box-shadow: 0 30px 75px -15px rgba(50,50,93,0.3), 0 25px 40px -20px rgba(0,0,0,0.1);

		thead {
			background: #E7F7F5;
			color: $text-dark-color;
			text-align: left;
			font-weight: $bold-weight;

			th {
				font-weight: $bold-weight;
			}
		}

		th, td {
			padding: 10px;
			font-size: $p-small;
			font-weight: $p-weight;
			line-height: 1.3;

			@include mq(tabletp) {
				padding: 15px;
				font-size: $p-medium;
			}

			@include mq(laptop) {
				padding: 20px;
				font-size: $p-large;
				line-height: 1.6;
			}
		}

		tr {
			border-top: 1px solid #f4f5f6;

			// &:nth-child(2n) {
			// 	background: $background-alt-color;
			// }
		}
	}
}

.image-wrap,
.video-wrap {
	position: relative;
	max-width: 80%;
	margin: 20px auto;

	@include mq(tabletp) {
		margin: 30px auto;
		max-width: 70%;
	}

	@include mq(laptop) {
		margin: 20px auto;
		max-width: 60%;
	}

	&:first-child {
		margin-top: 0;
	}
}

.image-wrap img {
	margin: 0 auto;
}

.video {
	position: relative;
	width: 100%;
	height: 0;

	iframe {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}
}

.error-image {
	display: none;

	@include mq(tabletp) {
		display:inline;
		margin-left: 10%;
	}

	@include mq(tabletl) {
		display: inline;
		margin-left: 10%;
	}

	@include mq(laptop) {
		display: inline;
		margin-left: 25%;
	}
}

.error-text {

	@include mq(tabletp) {
		position: absolute;
		bottom: 4%;
    right: 1%;
    width: 80%;
	}

	@include mq(tabletl) {
		position: absolute;
		bottom: 4%;
    right: 1%;
    width: 80%;
	}

	@include mq(laptop) {
		position: absolute;
		bottom: 16%;
		right: 21%;
		width: 50%;
	}
}

.negative-margin {
	margin-top: -40px;
}

.negative-margin-small {
	margin-top: -30px;
}

.positive-margin {
	margin-top: 30px;
}

